--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -4,3 +4,18 @@ html,
 body {
   font-family: 'Montserrat', sans-serif;
 }
+
+.dark-background {
+  background-color: black;
+}
+
+.light-text {
+  color: white;
+}
+.dot {
+  height: 25px;
+  width: 25px;
+  background-color: white;
+  border-radius: 50%;
+  display: inline-block;
+}
